buildscript {
    repositories {
        maven {
            url 'https://maven.aliyun.com/repository/public/'
        }
        maven {
            url "https://maven.aliyun.com/repository/gradle-plugin"
        }
    }
}

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
    id 'org.beryx.jlink' version '2.24.1'
}

group 'io.vanstudio'
version '1.1.0'

repositories {
    maven {
        url 'https://maven.aliyun.com/repository/public/'
    }
    mavenCentral()
    maven {
        url "https://maven.aliyun.com/repository/gradle-plugin"
    }
}

sourceCompatibility = '16'
targetCompatibility = '16'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'io.vanstudio.srt'
    mainClass = 'io.vanstudio.srt.Main'
}

javafx {
    version = '16'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher{
        name = 'SrtEdit'
        jvmArgs = ['-Dlog4j.configurationFile=./log4j2.xml','-Djava.locale.providers=HOST,CLDR,COMPAT']
    }
    jpackage {
        icon = 'src/main/resources/icons/srte.icns'
    }
}

dependencies {
//    implementation('com.google.apis:google-api-services-translate:v3-rev20220805-2.0.0')
//    implementation('org.apache.httpcomponents.client5:httpclient5:5.1.3')
//    implementation("com.alibaba:fastjson:1.2.62")
//    implementation("org.glassfish.jersey.core:jersey-common:3.0.8")
//    implementation("javax.ws.rs:javax.ws.rs-api:2.1.1")
//    implementation("javax.xml.bind:jaxb-api:2.3.1")
    implementation("com.google.code.gson:gson:2.9.1")
    implementation("org.apache.httpcomponents:httpclient:4.5.13")

//    implementation 'org.openjdk.nashorn:nashorn-core:15.4'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

test {
    useJUnitPlatform()
}

